--- a/docs/tools/index.yml
+++ b/docs/tools/index.yml
@@ -1,19 +1,19 @@
 ### YamlMime:YamlDocument
 documentType: LandingData
-title: "Narzędzia środowiska Xamarin"
+title: Narzędzia środowiska Xamarin
 metadata:
-  description: "Narzędzia ulepszające środowisko programowania Xamarin."
+  description: Narzędzia ulepszające środowisko programowania Xamarin.
   author: conceptdev
   ms.author: crdun
   ms.date: 02-17-2018
   ms.topic: landing-page
-  ms.openlocfilehash: 61fa7aa174a4c5681f36b11d808cd02fc3c5908b
-  ms.sourcegitcommit: 8e722d72c5d1384889f70adb26c5675544897b1f
+  ms.openlocfilehash: b1f47f67677c2618b89b52ab2c015a8a4da48f95
+  ms.sourcegitcommit: c9ebf456e1c6924956bedb13f4ea78ff09f7b1a0
   ms.translationtype: HT
   ms.contentlocale: pl-PL
-  ms.lasthandoff: 03/15/2018
+  ms.lasthandoff: 05/04/2018
 abstract:
-  description: "Narzędzia ulepszające środowisko programowania Xamarin."
+  description: Narzędzia ulepszające środowisko programowania Xamarin.
   menu:
     items:
     - href: https://visualstudio.com/
@@ -21,54 +21,48 @@ abstract:
     - href: https://developer.xamarin.com/releases/#mac
       text: Uwagi do wersji
 sections:
-- title: "Narzędzia"
+- title: Narzędzia
   items:
   - type: list
     style: cards
     className: cardsC
     items:
     - href: ~/tools/live-player/index.md
-      html: "W kilka minut rozpocznij pracę ze środowiskiem Xamarin, korzystając z aplikacji Live Player w programie Visual Studio."
+      html: W kilka minut rozpocznij pracę ze środowiskiem Xamarin, korzystając z aplikacji Live Player w programie Visual Studio.
       image:
         src: ~/media/index/xamarin-tools-live-player.svg?branch=master
         href: ~/tools/live-player/index.md
       title: Xamarin Live Player
     - href: ~/tools/inspector/index.md
-      html: "Poznawaj i debuguj interfejs użytkownika."
+      html: Poznawaj i debuguj interfejs użytkownika.
       image:
         src: ~/media/index/xamarin-tools-inspector.svg?branch=master
         href: ~/tools/inspector/index.md
       title: Xamarin Inspector
     - href: ~/tools/workbooks/index.md
-      html: "Interaktywna nauka języka C# i platformy Xamarin."
+      html: Interaktywna nauka języka C# i platformy Xamarin.
       image:
         src: https://docs.microsoft.com/en-us/media/illustrations/dynamics-resource-library.svg
         href: ~/tools/workbooks/index.md
       title: Xamarin Workbooks
     - href: ~/tools/ios-simulator.md
-      html: "Korzystaj z symulatora systemu iOS przy użyciu programu Visual Studio w systemie Windows."
+      html: Korzystaj z symulatora systemu iOS przy użyciu programu Visual Studio w systemie Windows.
       image:
         src: ~/media/index/xamarin-tools-windows-simulator.svg?branch=master
         href: ~/tools/ios-simulator.md
       title: Symulator systemu iOS dla systemu Windows
     - href: ~/tools/profiler/index.md
-      html: "Identyfikuj i rozwiązuj problemy z wydajnością."
+      html: Identyfikuj i rozwiązuj problemy z wydajnością.
       image:
         src: ~/media/index/xamarin-tools-profiler.svg?branch=master
         href: ~/tools/profiler/index.md
       title: Xamarin Profiler
     - href: ~/tools/dotnet-embedding/index.md
-      html: "Umożliwia wykorzystywanie istniejącego kodu .NET z poziomu innych języków programowania."
+      html: Umożliwia wykorzystywanie istniejącego kodu .NET z poziomu innych języków programowania.
       image:
         src: ~/media/index/xamarin-cross-platform-dotnet-embedding.svg
         href: ~/tools/dotnet-embedding/index.md
       title: Osadzanie kodu .NET
-    - href: https://developer.xamarin.com/testcloud/
-      html: "Testuj aplikację na dowolnym urządzeniu."
-      image:
-        src: https://docs.microsoft.com/en-us/media/illustrations/team-services-agile-track.svg
-        href: https://developer.xamarin.com/testcloud/
-      title: Xamarin Test Cloud
 - title: Platformy
   items:
   - type: list
@@ -77,13 +71,13 @@ sections:
     items:
     - title: Xamarin.Forms
       href: ~/xamarin-forms/index.md
-      html: "<p><a href=\"~/xamarin-forms/get-started/index.md\">Wprowadzenie</a><br /><a href=\"~/xamarin-forms/app-fundamentals/index.md\">Podstawy aplikacji</a><br /><a href=\"~/xamarin-forms/user-interface/index.md\">Interfejs użytkownika</a><br /><a href=\"~/xamarin-forms/platform/index.md\">Funkcje platformy</a><br /><a href=\"~/xamarin-forms/deploy-test/index.md\">Wdrażanie i testowanie</a><br /><a href=\"~/xamarin-forms/xaml/index.md\">XAML</a><br /><a href=\"~/xamarin-forms/data-cloud/index.md\">Usługi danych i usługi w chmurze</a><br /><a href=\"~/xamarin-forms/internals/index.md\">Pojęcia zaawansowane i elementy wewnętrzne</a></p>"
+      html: <p><a href="~/xamarin-forms/get-started/index.md">Wprowadzenie</a><br /><a href="~/xamarin-forms/app-fundamentals/index.md">Podstawy aplikacji</a><br /><a href="~/xamarin-forms/user-interface/index.md">Interfejs użytkownika</a><br /><a href="~/xamarin-forms/platform/index.md">Funkcje platformy</a><br /><a href="~/xamarin-forms/deploy-test/index.md">Wdrażanie i testowanie</a><br /><a href="~/xamarin-forms/xaml/index.md">XAML</a><br /><a href="~/xamarin-forms/data-cloud/index.md">Usługi danych i usługi w chmurze</a><br /><a href="~/xamarin-forms/internals/index.md">Pojęcia zaawansowane i elementy wewnętrzne</a></p>
     - title: Android
       href: ~/android/index.md
-      html: "<p><a href=\"~/android/get-started/index.md\">Wprowadzenie</a><br /><a href=\"~/android/app-fundamentals/index.md\">Podstawy aplikacji</a><br /><a href=\"~/android/user-interface/index.md\">Interfejs użytkownika</a><br /><a href=\"~/android/platform/index.md\">Funkcje platformy</a><br /><a href=\"~/android/deploy-test/index.md\">Wdrażanie i testowanie</a><br /><a href=\"~/android/data-cloud/index.md\">Usługi danych i usługi w chmurze</a><br /><a href=\"~/android/internals/index.md\">Pojęcia zaawansowane i elementy wewnętrzne</a></p>"
+      html: <p><a href="~/android/get-started/index.md">Wprowadzenie</a><br /><a href="~/android/app-fundamentals/index.md">Podstawy aplikacji</a><br /><a href="~/android/user-interface/index.md">Interfejs użytkownika</a><br /><a href="~/android/platform/index.md">Funkcje platformy</a><br /><a href="~/android/deploy-test/index.md">Wdrażanie i testowanie</a><br /><a href="~/android/data-cloud/index.md">Usługi danych i usługi w chmurze</a><br /><a href="~/android/internals/index.md">Pojęcia zaawansowane i elementy wewnętrzne</a></p>
     - title: iOS
       href: ~/ios/index.md
-      html: "<p><a href=\"~/ios/get-started/index.md\">Wprowadzenie</a><br /><a href=\"~/ios/app-fundamentals/index.md\">Podstawy aplikacji</a><br /><a href=\"~/ios/user-interface/index.md\">Interfejs użytkownika</a><br /><a href=\"~/ios/platform/index.md\">Funkcje platformy</a><br /><a href=\"~/ios/deploy-test/index.md\">Wdrażanie i testowanie</a><br /><a href=\"~/ios/data-cloud/index.md\">Usługi danych i usługi w chmurze</a><br /><a href=\"~/ios/internals/index.md\">Pojęcia zaawansowane i elementy wewnętrzne</a></p>"
+      html: <p><a href="~/ios/get-started/index.md">Wprowadzenie</a><br /><a href="~/ios/app-fundamentals/index.md">Podstawy aplikacji</a><br /><a href="~/ios/user-interface/index.md">Interfejs użytkownika</a><br /><a href="~/ios/platform/index.md">Funkcje platformy</a><br /><a href="~/ios/deploy-test/index.md">Wdrażanie i testowanie</a><br /><a href="~/ios/data-cloud/index.md">Usługi danych i usługi w chmurze</a><br /><a href="~/ios/internals/index.md">Pojęcia zaawansowane i elementy wewnętrzne</a></p>
     - title: Mac
       href: ~/mac/index.md
-      html: "<p><a href=\"~/mac/get-started/index.md\">Wprowadzenie</a><br /><a href=\"~/mac/app-fundamentals/index.md\">Podstawy aplikacji</a><br /><a href=\"~/mac/user-interface/index.md\">Interfejs użytkownika</a><br /><a href=\"~/mac/platform/index.md\">Funkcje platformy</a><br /><a href=\"~/mac/deploy-test/index.md\">Wdrażanie i testowanie</a><br /><a href=\"~/mac/internals/index.md\">Pojęcia zaawansowane i elementy wewnętrzne</a></p>"
+      html: <p><a href="~/mac/get-started/index.md">Wprowadzenie</a><br /><a href="~/mac/app-fundamentals/index.md">Podstawy aplikacji</a><br /><a href="~/mac/user-interface/index.md">Interfejs użytkownika</a><br /><a href="~/mac/platform/index.md">Funkcje platformy</a><br /><a href="~/mac/deploy-test/index.md">Wdrażanie i testowanie</a><br /><a href="~/mac/internals/index.md">Pojęcia zaawansowane i elementy wewnętrzne</a></p>
