--- a/docs/cross-platform/index.yml
+++ b/docs/cross-platform/index.yml
@@ -7,16 +7,16 @@ metadata:
   ms.author: crdun
   ms.date: 04/25/2018
   ms.topic: landing-page
-  ms.openlocfilehash: 51ca9ee767acf453b252a967e0bbcd083c52ce20
-  ms.sourcegitcommit: dc882e9631b4ed52596b944a6fbbdde309346943
+  ms.openlocfilehash: 9a08ccb3b00990a8b8425a2eb95d1f2390dda30e
+  ms.sourcegitcommit: 4b0582a0f06598f3ff8ad5b817946459fed3c42a
   ms.translationtype: HT
   ms.contentlocale: pl-PL
-  ms.lasthandoff: 04/26/2018
+  ms.lasthandoff: 05/03/2018
 abstract:
-  description: Środowisko Xamarin zapewnia platformę na potrzeby opracowywania aplikacji międzyplatformowych dla urządzeń przenośnych, tabletów i komputerów stacjonarnych.
+  description: Środowisko Xamarin zapewnia międzyplatformowe rozwiązanie do tworzenia aplikacji na urządzenia przenośne, tablety i komputery stacjonarne. W tej sekcji omówiono szczegóły niezależne od docelowej platformy.
   menu:
     items:
-    - href: ~/cross-platform/samples/
+    - href: ~/cross-platform/samples/index.yml
       text: Przykłady środowiska Xamarin
     - href: /visualstudio/
       text: Visual Studio
@@ -35,13 +35,21 @@ sections:
       text: Wymagania
       href: ~/cross-platform/get-started/requirements.md
     - image:
-        src: https://docs.microsoft.com/media/common/i_mobileapp.svg
-      text: Wprowadzenie
+        src: ~/media/icons/i_desktop-phone.svg
+      text: Xamarin.Forms
       href: ~/xamarin-forms/get-started/hello-xamarin-forms/quickstart.md
     - image:
         src: https://docs.microsoft.com/media/common/i_mobileapp.svg
-      text: Aplikacje z wieloma ekranami
-      href: ~/xamarin-forms/get-started/hello-xamarin-forms-multiscreen/quickstart.md
+      text: Android
+      href: ~/android/get-started/hello-android/hello-android-quickstart
+    - image:
+        src: https://docs.microsoft.com/media/common/i_mobile-app-developement.svg
+      text: iOS
+      href: ~/ios/get-started/hello-ios/hello-ios-quickstart.md
+    - image:
+        src: https://docs.microsoft.com/media/common/i_xplat-code.svg
+      text: Mac
+      href: ~/mac/get-started/hello-mac.md
 - title: Przewodniki
   items:
   - type: list
@@ -54,30 +62,36 @@ sections:
         src: https://docs.microsoft.com/en-us/media/common/i_get-started.svg
         href: ~/cross-platform/get-started/index.md
       title: Wprowadzenie
+    - href: ~/cross-platform/platform
+      html: Środowisko Xamarin obsługuje języki C#, F# i mechanizm szablonów Razor.
+      image:
+        src: ~/media/icons/i_app-build.svg
+        href: ~/cross-platform/platform
+      title: Obsługa języków
     - href: ~/cross-platform/app-fundamentals/
       html: Wszystko, co musisz wiedzieć, aby tworzyć aplikacje.
       image:
-        src: ~/media/icons/i_app-build.svg
-        href: ~/cross-platform/app-fundamentals/
-      title: Podstawy aplikacji
-    - href: ~/cross-platform/platform
-      html: Praca z funkcjami platformy.
-      image:
         src: ~/media/icons/i_platform.svg
-        href: ~/
-      title: Funkcje platformy
+        href: ~/cross-platform/app-fundamentals/
+      title: Udostępnianie kodu
+    - href: ~/cross-platform/deploy-test/performance.md
+      html: Wytyczne dotyczące wydajności i bezpieczeństwa aplikacji.
+      image:
+        src: https://docs.microsoft.com/en-us/media/common/i_code-performance.svg
+        href: ~/cross-platform/deploy-test/performance.md
+      title: Wydajność i bezpieczeństwo
     - href: ~/cross-platform/deploy-test/
-      html: Instrukcje dotyczące tworzenia i wdrażania aplikacji oraz porady na temat ich wcześniejszego testowania.
+      html: Porady dotyczące debugowania i wdrażania.
       image:
         src: ~/media/icons/i_deploy-test.svg
         href: ~/cross-platform/deploy-test/
-      title: Wdrażanie i testowanie
-    - href: ~/cross-platform/macios/
-      html: Często używane funkcje zestawów SDK systemów iOS, watchOS, tvOS i macOS.
+      title: Wdrażanie i debugowanie
+    - href: ~/cross-platform/desktop/
+      html: Wskazówki dla deweloperów aplikacji klasycznych na platformie .NET zainteresowanych tworzeniem aplikacji mobilnych.
       image:
-        src: https://docs.microsoft.com/media/logos/logo_xcode.svg
-        href: ~/cross-platform/macios/
-      title: Platforma firmy Apple (Mac i iOS)
+        src: https://docs.microsoft.com/en-us/media/common/i_xplat-code.svg
+        href: ~/cross-platform/desktop/
+      title: Deweloperzy aplikacji klasycznych
 - title: Platformy
   items:
   - type: list
@@ -85,14 +99,14 @@ sections:
     className: cardsD
     items:
     - title: Xamarin.Forms
-      href: ~/xamarin-forms/index.md
+      href: ~/xamarin-forms/index.yml
       html: <p><a href="~/xamarin-forms/get-started/index.md">Wprowadzenie</a><br /><a href="~/xamarin-forms/app-fundamentals/index.md">Podstawy aplikacji</a><br /><a href="~/xamarin-forms/user-interface/index.md">Interfejs użytkownika</a><br /><a href="~/xamarin-forms/platform/index.md">Funkcje platformy</a><br /><a href="~/xamarin-forms/deploy-test/index.md">Wdrażanie i testowanie</a><br /><a href="~/xamarin-forms/xaml/index.md">XAML</a><br /><a href="~/xamarin-forms/data-cloud/index.md">Usługi danych i usługi w chmurze</a><br /><a href="~/xamarin-forms/internals/index.md">Pojęcia zaawansowane i elementy wewnętrzne</a></p>
     - title: Android
-      href: ~/android/index.md
+      href: ~/android/index.yml
       html: <p><a href="~/android/get-started/index.md">Wprowadzenie</a><br /><a href="~/android/app-fundamentals/index.md">Podstawy aplikacji</a><br /><a href="~/android/user-interface/index.md">Interfejs użytkownika</a><br /><a href="~/android/platform/index.md">Funkcje platformy</a><br /><a href="~/android/deploy-test/index.md">Wdrażanie i testowanie</a><br /><a href="~/android/data-cloud/index.md">Usługi danych i usługi w chmurze</a><br /><a href="~/android/internals/index.md">Pojęcia zaawansowane i elementy wewnętrzne</a></p>
     - title: iOS
-      href: ~/ios/index.md
+      href: ~/ios/index.yml
       html: <p><a href="~/ios/get-started/index.md">Wprowadzenie</a><br /><a href="~/ios/app-fundamentals/index.md">Podstawy aplikacji</a><br /><a href="~/ios/user-interface/index.md">Interfejs użytkownika</a><br /><a href="~/ios/platform/index.md">Funkcje platformy</a><br /><a href="~/ios/deploy-test/index.md">Wdrażanie i testowanie</a><br /><a href="~/ios/data-cloud/index.md">Usługi danych i usługi w chmurze</a><br /><a href="~/ios/internals/index.md">Pojęcia zaawansowane i elementy wewnętrzne</a></p>
     - title: Mac
-      href: ~/mac/index.md
+      href: ~/mac/index.yml
       html: <p><a href="~/mac/get-started/index.md">Wprowadzenie</a><br /><a href="~/mac/app-fundamentals/index.md">Podstawy aplikacji</a><br /><a href="~/mac/user-interface/index.md">Interfejs użytkownika</a><br /><a href="~/mac/platform/index.md">Funkcje platformy</a><br /><a href="~/mac/deploy-test/index.md">Wdrażanie i testowanie</a><br /><a href="~/mac/internals/index.md">Pojęcia zaawansowane i elementy wewnętrzne</a></p>
