--- a/docs/mac/index.yml
+++ b/docs/mac/index.yml
@@ -1,18 +1,19 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: 875677a4460f36626f158fc1c7b4a283a09678c1
+ms.sourcegitcommit: aa9b9b203ab4cd6a6b4fd51e27d865e2abf582c1
+ms.translationtype: HT
+ms.contentlocale: pl-PL
+ms.lasthandoff: 07/30/2018
+ms.locfileid: "39350687"
 documentType: LandingData
 title: Xamarin.Mac
 metadata:
   description: Rozszerzenie Xamarin.Mac uwidacznia kompletny zestaw macOS SDK dla deweloperów platformy .NET.
   author: conceptdev
   ms.author: crdun
-  ms.date: 04/25/2018
+  ms.date: 07/27/2018
   ms.topic: landing-page
-  ms.openlocfilehash: 7cbc1015f15838d67b0a496e9eeffd89a276b003
-  ms.sourcegitcommit: 4b0582a0f06598f3ff8ad5b817946459fed3c42a
-  ms.translationtype: HT
-  ms.contentlocale: pl-PL
-  ms.lasthandoff: 05/03/2018
-  ms.locfileid: "32436482"
+  ms.technology: xamarin-mac
 abstract:
   description: Rozszerzenie Xamarin.Mac uwidacznia kompletny zestaw macOS SDK dla deweloperów platformy .NET. Twórz całkowicie natywne aplikacje w programie Visual Studio dla komputerów Mac.
   menu:
