--- a/docs/xamarin-forms/index.yml
+++ b/docs/xamarin-forms/index.yml
@@ -1,18 +1,19 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: 1a8038d4bdbe9030ebd467fe38d0559576be5765
+ms.sourcegitcommit: aa9b9b203ab4cd6a6b4fd51e27d865e2abf582c1
+ms.translationtype: HT
+ms.contentlocale: pl-PL
+ms.lasthandoff: 07/30/2018
+ms.locfileid: "39351525"
 documentType: LandingData
 title: Xamarin.Forms
 metadata:
   description: Zestaw narzędzi Xamarin.Forms uwidacznia pełny międzyplatformowy zestaw narzędzi interfejsu użytkownika dla deweloperów platformy .NET umożliwiający tworzenie aplikacji dla urządzeń przenośnych, tabletów i komputerów.
   author: conceptdev
   ms.author: crdun
-  ms.date: 04/25/2018
+  ms.date: 07/27/2018
   ms.topic: landing-page
-  ms.openlocfilehash: 21325d312fe3b05e06a2cfad5c085273b4e5e890
-  ms.sourcegitcommit: daa089d41cfe1ed0456d6de2f8134cf96ae072b1
-  ms.translationtype: HT
-  ms.contentlocale: pl-PL
-  ms.lasthandoff: 05/07/2018
-  ms.locfileid: "33850772"
+  ms.technology: xamarin-forms
 abstract:
   description: Zestaw narzędzi Xamarin.Forms uwidacznia pełny międzyplatformowy zestaw narzędzi interfejsu użytkownika dla deweloperów platformy .NET. Kompiluj całkowicie natywne aplikacje dla systemów Android, iOS i platformy uniwersalnej systemu Windows przy użyciu języka C# w programie Visual Studio.
   menu:
